<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.OscarMiralles_MAPD711_Test.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/app_tittle"
            app:popupTheme="@style/Theme.OscarMiralles_MAPD711_Test.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/vehicle_size"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="70dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radio_group_vehicle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/lightVehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="vehicleSelector"
                android:text="Light Vehicle"/>

            <RadioButton
                android:id="@+id/heavyVehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="vehicleSelector"
                android:text="Heavy Vehicle"/>

            <RadioButton
                android:id="@+id/heavyMulti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:onClick="vehicleSelector"
                android:text="Heavy Multi Vehicle"/>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_label"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/distance_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:width="300dp"
                android:inputType="numberDecimal"
                android:maxLength="5"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="Km"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/time_of_day_label"
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/spin_day_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/direction_label"
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radio_group_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/direction_east"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="directionSelector"
                android:text="East Bound"/>

            <RadioButton
                android:id="@+id/direction_west"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="directionSelector"
                android:text="West Bound"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:text="@string/transponder_label"/>
            <Switch
                android:id="@+id/transponder_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="180dp"
                android:onClick="transporterSelector"
                android:layout_marginRight="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:text="@string/load_online_calculator_label"/>

            <CheckBox
                android:id="@+id/load_calculator_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="10dp"
                android:onClick="loadOnlineCalcSelector"
                android:layout_marginRight="20dp" />

        </LinearLayout>

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="40dp"
            android:text="@string/calculate_button"
            android:onClick="calculateToll"
            android:textAllCaps="false"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>